DT-47: Cập nhật trang Catalog
- chỉnh sửa giao diện.
- chỉnh hiệu ứng hover cho button Mua.

--- a/frontend/src/app/client/catalog/catalog.component.css
+++ b/frontend/src/app/client/catalog/catalog.component.css
@@ -41,45 +41,19 @@ color:#1C1B1F;
 }
 
 
-.card a{
+.btn {
     font-size: 18px;
-    text-decoration: none;
+    background: #437ac3;
+    width: 100px;
     text-align: center;
-    box-sizing: border-box;
-    border-radius: 10px;
-    background: #4E81C2;
+    text-decoration: none;
+    font-weight: bold;
     color: #F6F4EC;
-    box-shadow: 2px 2px;
-    height: 100%;
-    width: 100%;
-    transition-property: all;
-    transition-duration: .6s;
-    transition-timing-function: ease; 
-    color: white;
-    padding: .25em;
-    text-decoration: none;
-} 
-.card a:hover {
-        background: #437ac3;
-        color: rgb(223, 222, 220);
-    
-    } 
-
-.btn-3 {
-    background: lighten(#4E81C2, 3%);  
-    border: 1px solid darken(#4E81C2, 4%);
-    box-shadow: 0px 2px 0 darken(#4E81C2, 5%), 2px 4px 6px darken(#4E81C2, 2%);
-    font-weight: 900;
-    letter-spacing: 1px;
-    transition: all 150ms linear;
+    border-radius: 10px;
+    cursor: pointer;
 }
-
-.btn-3:hover {
-    background: darken(#4E81C2, 1.5%);
-    border: 1px solid rgba(#000, .05);
-    box-shadow: 1px 1px 2px rgba(#fff, .2);
-    color: lighten(#4E81C2, 18%); 
-    text-decoration: none;
-    text-shadow: -1px -1px 0 darken(#4E81C2, 9.5%);
-    transition: all 250ms linear;
+.btn:hover {
+    box-shadow: 1px 1px 2px rgba(255, 255, 255, .5);
+    background: #437ac3;
+    color: rgb(191, 212, 240);
 }
