--- a/frontend/src/app/client/catalog/catalog.component.html
+++ b/frontend/src/app/client/catalog/catalog.component.html
@@ -25,7 +25,7 @@
                     <h5 class="card-title">{{item.tenSP}}</h5>
                     <div class="d-flex">
                         <p class="card-text">{{item.giaTien}}</p>
-                        <a href="#" (click)="changeToDetailPage(item._id)">Mua</a>
+                        <span><a href="#" (click)="changeToDetailPage(item._id)" class="btn mx-5">Mua</a></span>
                     </div>
                 </div>
             </div>
