--- a/frontend/src/app/client/user-page/user-page.component.html
+++ b/frontend/src/app/client/user-page/user-page.component.html
@@ -1,1 +1,70 @@
-<p>user-page works!</p>
+<body>
+  <div class="banner row">
+    <div class="left">
+      <h1 class="text-white">Thông tin cá nhân</h1>
+    </div>
+    <div class="right">
+      <img src="assets/Login/loginFish.png" class="bannerFish" />
+    </div>
+  </div>
+  <!--  -->
+  <div class="content container-fluid">
+    <div class="row">
+      <h2 class="text-center p-4">Chào mừng User đến với thủy cung của mình</h2>
+    </div>
+
+    <div class="row">
+      <div class="menu">
+        <ul>
+          <li class="py-3">
+            <a>Trang cá nhân</a>
+          </li>
+          <li class="py-3">
+            <a>Đơn mua</a>
+          </li>
+          <li class="py-3"><a>Đăng xuất</a></li>
+        </ul>
+      </div>
+
+      <div class="menu-content">
+        <div class="infobox col">
+          <h3 class="p-3">Thông tin tài khoản</h3>
+          <!-- FORM -->
+          <div class="ms-5 fs-5">
+            <div class="form-group">
+              <label>Họ tên:</label>
+              <input
+                type="text"
+                aria-describedby="emailHelp"
+                placeholder="Lê Thành Duy Ân"
+              />
+            </div>
+            <div class="form-group">
+              <label>Giới tính:</label>
+              <label for="male">Nam</label>
+              <input type="radio" id="male" name="gender" />
+              <label for="female">Nữ</label>
+              <input type="radio" id="female" name="gender" />
+            </div>
+            <div class="form-group">
+              <label>Số điện thoại:</label>
+              <input
+                type="text"
+                aria-describedby="emailHelp"
+                placeholder="Lê Thành Duy Ân"
+              />
+            </div>
+            <div class="form-group">
+              <label>Địa chỉ:</label>
+              <input
+                type="text"
+                aria-describedby="emailHelp"
+                placeholder="Lê Thành Duy Ân"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
