--- a/frontend/src/app/client/header/header.component.css
+++ b/frontend/src/app/client/header/header.component.css
@@ -4,9 +4,8 @@
 }
 
 .header {
-  position: fixed;
+  position: sticky;
   top: 0;
-  left: 0;
   width: 100%;
   padding: 20px 50px;
   background: rgba(255, 255, 255, 0.1);
