thêm giao diện yêu cầu xác thực gmail

--- a/frontend/src/app/client/login/verify-noti/verify-noti.component.html
+++ b/frontend/src/app/client/login/verify-noti/verify-noti.component.html
@@ -5,10 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xác thực Email</title>
 </head>
+<style>
+  body{
+    background-color: #96D0E9;
+  }
+  .bg{
+    width: 30%;
+    height: 60%;
+    background-color: white;
+    padding: 0;
+  }
+
+  .bgImg{
+    background-color: antiquewhite;
+    height: auto;
+  }
+
+  .button{
+    border:solid red;
+  }
+
+  img{
+    margin: 20px 0px 20px 0px;
+    width: 25%;
+    height: auto;
+  }
+
+  .content{
+    margin-top: 30px;
+  }
+
+  hr{
+    margin-top: 50px;
+  }
+</style>
+
 <body>
-    <div class="container bg-dark">
-        <div class="message">Vui lòng xác thực Email của bạn</div>
-        <a class="button" href="#">Xác thực Email</a>
+    <div class="container bg">
+        <div class="bgImg">
+          <img src="../../../../assets/Shared/logo.png">
+        </div>
+        <div class="content">
+          <h1>Verify your email</h1>
+          <h4 style="margin-top: 20px;">Our website has sent you an email to verify</h4>
+          <p style="margin-top: 20px;">Please check your mail to verify successfully! :)</p>
+          <a href="https://mail.google.com/mail/u/0/#inbox">Vào gmail</a>
+        </div>
+        <hr>
+        <div>
+          <p>Any question? See your answer in the link below:</p>
+          <a href="">Trung tâm trợ giúp</a>
+        </div>
     </div>
 </body>
 </html>
