xong chức năng hiển thị sp theo đại dương, hiển thị thông tin cá nhân

--- a/frontend/src/app/client/header/header.component.html
+++ b/frontend/src/app/client/header/header.component.html
@@ -39,7 +39,7 @@
         id="dropdownMenuLink"
         data-bs-toggle="dropdown"
         aria-expanded="false"
-        *ngIf="!isLoggedIn(); else loggedIn"
+        *ngIf="isLoggedIn(); else loggedIn"
       >
         <i class="fas fa-user-circle" style="font-size: 1.5rem"></i>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
