--- a/frontend/src/app/client/user-page/user-page.component.html
+++ b/frontend/src/app/client/user-page/user-page.component.html
@@ -27,41 +27,57 @@
       </div>
 
       <div class="menu-content">
-        <div class="infobox col">
-          <h3 class="p-3">Thông tin tài khoản</h3>
-          <!-- FORM -->
-          <div class="ms-5 fs-5">
-            <div class="form-group">
-              <label>Họ tên:</label>
-              <input
-                type="text"
-                aria-describedby="emailHelp"
-                placeholder="Lê Thành Duy Ân"
-              />
-            </div>
-            <div class="form-group">
-              <label>Giới tính:</label>
-              <label for="male">Nam</label>
-              <input type="radio" id="male" name="gender" />
-              <label for="female">Nữ</label>
-              <input type="radio" id="female" name="gender" />
-            </div>
-            <div class="form-group">
-              <label>Số điện thoại:</label>
-              <input
-                type="text"
-                aria-describedby="emailHelp"
-                placeholder="Lê Thành Duy Ân"
-              />
-            </div>
-            <div class="form-group">
-              <label>Địa chỉ:</label>
-              <input
-                type="text"
-                aria-describedby="emailHelp"
-                placeholder="Lê Thành Duy Ân"
-              />
-            </div>
+        <div class="infobox row">
+          <h3 class="ps-5 pt-3 pb-3">Thông tin tài khoản</h3>
+          <div class="avatar col-4 d-flex justify-content-center pt-3">
+            <img src="assets/Login/avatar.png" />
+          </div>
+          <div class="infouser col-8 pt-4">
+            <form class="row g-4 fs-5">
+              <div class="col-md-6">
+                <label for="name" class="form-label fw-bold">Họ và Tên: </label>
+                <input type="text" class="form-control" id="name" />
+              </div>
+              <div class="col-md-6">
+                <label for="email" class="form-label fw-bold">Email: </label>
+                <input
+                  type="email"
+                  class="form-control fw-bold"
+                  id="inputPassword4"
+                />
+              </div>
+              <div class="col-3">
+                <label for="Gender" class="form-label fw-bold"
+                  >Giới tính:
+                </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="Gender"
+                  placeholder="Nam"
+                />
+              </div>
+              <div class="col">
+                <label for="phone" class="form-label fw-bold"
+                  >Số điện thoại:</label
+                >
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="address"
+                  placeholder="070 217 6453"
+                />
+              </div>
+              <div class="col-12">
+                <label for="address" class="form-label fw-bold">Địa chỉ:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="address"
+                  placeholder="828 Su Van hanh"
+                />
+              </div>
+            </form>
           </div>
         </div>
       </div>
