--- a/frontend/src/app/client/catalog/catalog.component.html
+++ b/frontend/src/app/client/catalog/catalog.component.html
@@ -15,17 +15,18 @@
     </div>
 </div>
 
-<div class="container-fluid">
-    <div class="row row-cols-3 d-flex justify-content-end" style ="padding-left:12%;">
-        <div class="col py-3" *ngFor="let item of listSP">
-            <div class="card" style="width: 15rem; border-radius: 20px 20px 0px 0px; border: 1px solid #000;">
-                <img src="http://localhost:3800/ProductImages/{{item.hinhAnh[0].tenImageSP}}" class="card-img-top p-2">
-                <hr class="pt-2"/>
+<div class="container" style="width: 100%; height: auto">
+    <div class="row row-cols-3">
+        <div class="col justify-content-center d-flex" *ngFor="let item of listSP">
+            <div class="card mb-3">
+                <img src="http://localhost:3800/ProductImages/{{ item.hinhAnh[0].tenImageSP }}" class="proimage card-img-top p-2"/>
                 <div class="card-body">
-                    <h5 class="card-title">{{item.tenSP}}</h5>
-                    <div class="d-flex">
-                        <p class="card-text">{{item.giaTien}}</p>
-                        <span><a href="#" (click)="changeToDetailPage(item._id)" class="btn mx-5">Mua</a></span>
+                    <h5 class="card-title fs-3">{{ item.tenSP }}</h5>
+                    <div class="col d-flex justify-content-between">
+                        <p class="card-text fs-5">
+                            {{ item.giaTien | currency : "VND" : " " }}Đ
+                        </p>
+                        <span><a href="#" (click)="changeToDetailPage(item._id)" class="btn">Mua</a></span>
                     </div>
                 </div>
             </div>
