--- a/frontend/src/app/client/product-detail/product-detail.component.html
+++ b/frontend/src/app/client/product-detail/product-detail.component.html
@@ -10,8 +10,15 @@
     <div class="khung-phai">
       <p class="p-change-1 mb-2">Cá Lông Lia thia</p>
       <p class="p-change-1 mb-2">Đơn giá: 15.000Đ</p>
-      <p class="p-change-1 mb-2">Tình trạng: Còn hàng</p>
-      <p class="p-change-1 mb-2">Đặc điểm nổi bật: Hay cắn nhau, sống riêng</p>
+      <p class="p-change-1 mb-2">Số lượng: 32</p>
+      <p class="p-change-1 mb-2">Trọng lượng: 0.5kg</p>
+      <p class="p-change-1 mb-2">Loại đại dương: Thái Bình Dương</p>
+      <p class="p-change-1 mb-2">
+        Mô tả: Cá hồi là một trong những loài cá nổi tiếng trên toàn thế giới,
+        được biết đến bởi sự di cư đặc biệt và giá trị dinh dưỡng cao. Chúng có
+        khả năng thực hiện cuộc di cư từ nơi chúng sinh sống trong biển lên các
+        con sông núi để đẻ trứng
+      </p>
       <div class="d-flex" style="">
         <p class="p-change-1 me-5">Số lượng:</p>
         <div class="wrapper">
