--- a/frontend/src/app/client/purchase/purchase.component.html
+++ b/frontend/src/app/client/purchase/purchase.component.html
@@ -29,11 +29,21 @@
       <p>Phương thức thanh toán</p>
     </div>
     <div>
-      <input class="radio-button" name="paymentMethod" type="radio" [value]="true" />
+      <input
+        class="radio-button"
+        name="paymentMethod"
+        type="radio"
+        [value]="true"
+      />
       <span class="span-change">Tiền mặt</span>
     </div>
     <div>
-      <input class="radio-button" name="paymentMethod" type="radio" [value]="false" />
+      <input
+        class="radio-button"
+        name="paymentMethod"
+        type="radio"
+        [value]="false"
+      />
       <span class="span-change">Chuyển khoản</span><br />
     </div>
   </div>
@@ -43,19 +53,36 @@
     <div class="align-items-center justify-content-center d-flex">
       <hr class="hr-2" />
     </div>
-    <div class="align-items-center justify-content-center d-flex">
-      <div class="col-4">
-        <img src="/assets/product-detail/Ca_hoi.png" class="img-change" />
+    <div class="scrollbar">
+      <div class="align-items-center justify-content-center d-flex">
+        <div class="col-4">
+          <img src="/assets/product-detail/Ca_hoi.png" class="img-change" />
+        </div>
+        <div class="col-4 text-center"><p class="p-change-2">Cá Hồi</p></div>
+        <div class="col-4 text-center"><p class="p-change-2">15.000đ</p></div>
       </div>
-      <div class="col-4 text-center"><p class="p-change-2">Cá Hồi</p></div>
-      <div class="col-4 text-center"><p class="p-change-2">15.000đ</p></div>
+      <div class="align-items-center justify-content-center d-flex">
+        <div class="col-4">
+          <img src="/assets/product-detail/Ca_hoi.png" class="img-change" />
+        </div>
+        <div class="col-4 text-center"><p class="p-change-2">Cá Hồi</p></div>
+        <div class="col-4 text-center"><p class="p-change-2">15.000đ</p></div>
+      </div>
+      <div class="align-items-center justify-content-center d-flex">
+        <div class="col-4">
+          <img src="/assets/product-detail/Ca_hoi.png" class="img-change" />
+        </div>
+        <div class="col-4 text-center"><p class="p-change-2">Cá Hồi</p></div>
+        <div class="col-4 text-center"><p class="p-change-2">15.000đ</p></div>
+      </div>
     </div>
+
     <div>
-      <hr class="hr-3">
+      <hr class="hr-3" />
     </div>
     <div class="d-flex mb-3">
       <div class="col-6 text-start">
-        <p class="p-change-2">Tạm tính: </p>
+        <p class="p-change-2">Tạm tính:</p>
       </div>
       <div class="col-6 text-end">
         <p class="p-change-2">15.000đ</p>
@@ -63,7 +90,7 @@
     </div>
     <div class="d-flex mb-3">
       <div class="col-6 text-start">
-        <p class="p-change-2">Phí giao hàng: </p>
+        <p class="p-change-2">Phí giao hàng:</p>
       </div>
       <div class="col-6 text-end">
         <p class="p-change-2">20.000đ</p>
@@ -71,16 +98,14 @@
     </div>
     <div class="d-flex">
       <div class="col-6 text-start">
-        <p class="p-change-2">thành tiền: </p>
+        <p class="p-change-2">thành tiền:</p>
       </div>
       <div class="col-6 text-end">
         <p class="p-change-2">35.000đ</p>
       </div>
     </div>
     <div class="align-items-center justify-content-center d-flex">
-    <button class="button-change">
-      Thanh Toán
-    </button>
+      <button class="button-change">Thanh Toán</button>
     </div>
   </div>
 </body>
