custom lại scrollbar

--- a/frontend/src/app/client/purchase/purchase.component.css
+++ b/frontend/src/app/client/purchase/purchase.component.css
@@ -108,6 +108,25 @@ input[type="radio"]:checked {
   overflow: auto;
   height: 15vh;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 /*chỉnh sửa thẻ p*/
 p {
   margin: 0px;
