--- a/frontend/src/app/client/product-detail/product-detail.component.html
+++ b/frontend/src/app/client/product-detail/product-detail.component.html
@@ -1,28 +1,136 @@
 <body>
-  <div class="con d-flex" style="margin-top: 10vw">
+  <div class="con row">
     <!-- khung-trai -->
     <div class="khung-trai">
-      <div class="wrapper-img">
-        <img class="img-change" src="http://localhost:3800/ProductImages/{{pro.tenImageSP}}" />
-      </div>
+      <img
+        class="img-change"
+        src="http://localhost:3800/ProductImages/{{ pro.tenImageSP }}"
+      />
     </div>
     <!--khung-phai-->
     <div class="khung-phai">
-      <p class="p-change-1 mb-2">{{pro.tenSP}}</p>
-      <p class="p-change-1 mb-2">{{pro.giaTien}}</p>
-      <p class="p-change-1 mb-2">Tình trạng: Còn hàng</p>
-      <p class="p-change-1 mb-2">Đặc điểm nổi bật: {{pro.moTa}}</p>
-      <div class="d-flex" style="">
-        <p class="p-change-1 me-5">Số lượng:</p>
+      <p class="title p-change-1 mb-2">{{ pro.tenSP }}</p>
+      <p class="content p-change-1 mb-2">
+        Đơn giá: {{ pro.giaTien | currency : "VND" : "" }}Đ
+      </p>
+      <p class="content p-change-1 mb-2">Tình trạng: Còn hàng</p>
+      <p class="content p-change-1 mb-2">Đặc điểm nổi bật: {{ pro.moTa }}</p>
+      <div class="d-flex">
+        <p class="content p-change-1 me-5">Số lượng:</p>
         <div class="wrapper">
           <span class="bt-change" (click)="counter('minus')">-</span>
-          <p class="p-change-1" style="text-align: center">{{ count }}</p>
+          <p class="fs-4 p-change-1">{{ count }}</p>
           <span class="bt-change" (click)="counter('add')">+</span>
         </div>
       </div>
       <div class="d-flex mt-4">
         <button class="bt-change-2 me-5 ms-5">Mua Ngay!</button>
         <button class="bt-change-3">Thêm vào giỏ hàng</button>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <!-- SLIDER -->
+  <div class="product">
+    <div class="container-fluid">
+      <div class="row">
+        <h1 class="boxtitle text-center">Mặt Hàng Tương Tự</h1>
+      </div>
+
+      <div class="slider">
+        <div class="slider-main">
+          <div class="item">
+            <div class="card mb-3">
+              <img
+                src="http://localhost:3800/ProductImages/{{ pro.tenImageSP }}"
+                class="proimage card-img-top p-2"
+              />
+              <div class="card-body">
+                <h5 class="card-title fs-3">{{ pro.tenSP }}</h5>
+                <div class="col d-flex justify-content-between">
+                  <p class="card-text fs-5">
+                    {{ pro.giaTien | currency : "VND" : " " }}Đ
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="card mb-3">
+              <img
+                src="http://localhost:3800/ProductImages/{{ pro.tenImageSP }}"
+                class="proimage card-img-top p-2"
+              />
+              <div class="card-body">
+                <h5 class="card-title fs-3">{{ pro.tenSP }}</h5>
+                <div class="col d-flex justify-content-between">
+                  <p class="card-text fs-5">
+                    {{ pro.giaTien | currency : "VND" : " " }}Đ
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="card mb-3">
+              <img
+                src="http://localhost:3800/ProductImages/{{ pro.tenImageSP }}"
+                class="proimage card-img-top p-2"
+              />
+              <div class="card-body">
+                <h5 class="card-title fs-3">{{ pro.tenSP }}</h5>
+                <div class="col d-flex justify-content-between">
+                  <p class="card-text fs-5">
+                    {{ pro.giaTien | currency : "VND" : " " }}Đ
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card mb-3">
+              <img
+                src="http://localhost:3800/ProductImages/{{ pro.tenImageSP }}"
+                class="proimage card-img-top p-2"
+              />
+              <div class="card-body">
+                <h5 class="card-title fs-3">{{ pro.tenSP }}</h5>
+                <div class="col d-flex justify-content-between">
+                  <p class="card-text fs-5">
+                    {{ pro.giaTien | currency : "VND" : " " }}Đ
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card mb-3">
+              <img
+                src="http://localhost:3800/ProductImages/{{ pro.tenImageSP }}"
+                class="proimage card-img-top p-2"
+              />
+              <div class="card-body">
+                <h5 class="card-title fs-3">{{ pro.tenSP }}</h5>
+                <div class="col d-flex justify-content-between">
+                  <p class="card-text fs-5">
+                    {{ pro.giaTien | currency : "VND" : " " }}Đ
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <button type="button" class="back" appBack>
+            <i class="fa-solid fa-chevron-left" style="color: #000000"></i>
+          </button>
+          <button type="button" class="next" appNext>
+            <i class="fa-solid fa-angle-right" style="color: #000000"></i>
+          </button>
+        </div>
       </div>
     </div>
   </div>
