--- a/frontend/src/app/client/product-detail/product-detail.component.css
+++ b/frontend/src/app/client/product-detail/product-detail.component.css
@@ -91,7 +91,7 @@ hr {
 .slider {
   position: relative;
   overflow: hidden;
-  height: 350px;
+  height: 450px;
   margin-top: 30px;
 }
 .slider-main {
@@ -101,8 +101,7 @@ hr {
 .item {
   display: inline-block;
   width: 300px;
-  height: 250px;
-  background: red;
+  height: 500px;
   margin-right: 50px;
   margin-left: 55px;
   position: relative;
@@ -110,9 +109,14 @@ hr {
 .card {
   border-radius: 25px;
 }
+.proimage{
+  width:300px;
+  height:300px;
+}
 .card-body {
   border-top: 1px solid rgb(190, 196, 190);
 }
+
 button {
   border-radius: 50%;
   border:none;
