--- a/frontend/src/app/client/catalog/catalog.component.html
+++ b/frontend/src/app/client/catalog/catalog.component.html
@@ -26,7 +26,7 @@
                         <p class="card-text fs-5">
                             {{ item.giaTien | currency : "VND" : " " }}Đ
                         </p>
-                        <span><a href="#" (click)="changeToDetailPage(item._id)" class="btn">Mua</a></span>
+                        <span><a (click)="changeToDetailPage(item._id)" class="btn">Mua</a></span>
                     </div>
                 </div>
             </div>
