thêm chức năng hiển thị danh sách đơn hàng, sửa lại chức năng thanh toán

--- a/frontend/src/app/cart-list/cart-list.component.html
+++ b/frontend/src/app/cart-list/cart-list.component.html
@@ -7,4 +7,4 @@
   <p>{{item.thanhTien}}</p>
   <hr><hr><hr>
 </div>
-<button (click)="buyCartList()">Mua ngay</button>
+<button (click)="changeToPurchasePage()">Mua ngay</button>
