--- a/frontend/src/app/client/user-page/user-page.component.html
+++ b/frontend/src/app/client/user-page/user-page.component.html
@@ -20,7 +20,7 @@
             <a>Trang cá nhân</a>
           </li>
           <li class="py-3">
-            <a>Đơn mua</a>
+            <a [routerLink]="['/cart-history']">Đơn mua</a>
           </li>
           <li class="py-3"><a (click)="logOut()">Đăng xuất</a></li>
         </ul>
