--- a/frontend/src/app/client/purchase/purchase.component.html
+++ b/frontend/src/app/client/purchase/purchase.component.html
@@ -2,7 +2,7 @@
   <!-- khung-trai -->
   <div class="khung-trai">
     <div>
-      <button class="fa fa-arrow-left btn-back"></button>
+      <button class="fa fa-arrow-left btn-back" (click)="goBack()"></button>
       <img class="logo" src="/assets/purchase/logo.png" alt="" />
     </div>
     <div class="ms-2 mt-3 p-change-1">
@@ -13,14 +13,34 @@
         class="input-change mb-2"
         placeholder="Họ và tên người nhận"
         type="text"
+        [(ngModel)]="inform.nameUser"
+        name="inform.nameUser"
+        required
       />
       <input
         class="input-change mb-2"
         placeholder="Địa chỉ email"
         type="email"
+        [(ngModel)]="inform.email"
+        name="inform.email"
+        required
       />
-      <input class="input-change mb-2" placeholder="Số điện thoại" type="tel" />
-      <input class="input-change" placeholder="Đại chỉ giao hàng" type="text" />
+      <input
+        class="input-change mb-2"
+        placeholder="Số điện thoại"
+        type="tel"
+        [(ngModel)]="inform.sdt"
+        name="inform.sdt"
+        required
+      />
+      <input
+        class="input-change"
+        placeholder="Địa chỉ giao hàng"
+        type="text"
+        [(ngModel)]="inform.addressDelivery"
+        name="inform.addressDelivery"
+        required
+      />
     </div>
     <div>
       <hr class="hr-1" />
@@ -31,18 +51,22 @@
     <div>
       <input
         class="radio-button"
-        name="paymentMethod"
         type="radio"
         [value]="true"
+        [(ngModel)]="phuongThucTT"
+        name="inform.phuongThucTT"
+        required
       />
       <span class="span-change">Tiền mặt</span>
     </div>
     <div>
       <input
         class="radio-button"
-        name="paymentMethod"
         type="radio"
         [value]="false"
+        [(ngModel)]="phuongThucTT"
+        name="inform.phuongThucTT"
+        required
       />
       <span class="span-change">Chuyển khoản</span><br />
     </div>
@@ -54,26 +78,23 @@
       <hr class="hr-2" />
     </div>
     <div class="scrollbar">
-      <div class="align-items-center justify-content-center d-flex">
-        <div class="col-4">
-          <img src="/assets/product-detail/Ca_hoi.png" class="img-change" />
+      <div *ngFor="let item of listSP">
+        <div class="align-items-center justify-content-center d-flex">
+          <div class="col-4">
+            <img
+              src="http://localhost:3800/ProductImages/{{ item.hinhAnh }}"
+              class="img-change"
+            />
+          </div>
+          <div class="col-4 text-center">
+            <p class="p-change-2">{{ item.tenSP }}</p>
+          </div>
+          <div class="col-4 text-center">
+            <p class="p-change-2">
+              {{ item.thanhTien | currency : "VND" : " " }}
+            </p>
+          </div>
         </div>
-        <div class="col-4 text-center"><p class="p-change-2">Cá Hồi</p></div>
-        <div class="col-4 text-center"><p class="p-change-2">15.000đ</p></div>
-      </div>
-      <div class="align-items-center justify-content-center d-flex">
-        <div class="col-4">
-          <img src="/assets/product-detail/Ca_hoi.png" class="img-change" />
-        </div>
-        <div class="col-4 text-center"><p class="p-change-2">Cá Hồi</p></div>
-        <div class="col-4 text-center"><p class="p-change-2">15.000đ</p></div>
-      </div>
-      <div class="align-items-center justify-content-center d-flex">
-        <div class="col-4">
-          <img src="/assets/product-detail/Ca_hoi.png" class="img-change" />
-        </div>
-        <div class="col-4 text-center"><p class="p-change-2">Cá Hồi</p></div>
-        <div class="col-4 text-center"><p class="p-change-2">15.000đ</p></div>
       </div>
     </div>
 
@@ -85,7 +106,7 @@
         <p class="p-change-2">Tạm tính:</p>
       </div>
       <div class="col-6 text-end">
-        <p class="p-change-2">15.000đ</p>
+        <p class="p-change-2">{{ tongTien | currency : "VND" : " " }}</p>
       </div>
     </div>
     <div class="d-flex mb-3">
@@ -93,7 +114,7 @@
         <p class="p-change-2">Phí giao hàng:</p>
       </div>
       <div class="col-6 text-end">
-        <p class="p-change-2">20.000đ</p>
+        <p class="p-change-2">20,000</p>
       </div>
     </div>
     <div class="d-flex">
@@ -101,11 +122,13 @@
         <p class="p-change-2">thành tiền:</p>
       </div>
       <div class="col-6 text-end">
-        <p class="p-change-2">35.000đ</p>
+        <p class="p-change-2">
+          {{ tongTien + 20000 | currency : "VND" : " " }}
+        </p>
       </div>
     </div>
     <div class="align-items-center justify-content-center d-flex">
-      <button class="button-change">Thanh Toán</button>
+      <button class="button-change" (click)="buyCart()">Thanh Toán</button>
     </div>
   </div>
 </body>
