--- a/frontend/src/app/client/user-page/user-page.component.css
+++ b/frontend/src/app/client/user-page/user-page.component.css
@@ -2,7 +2,7 @@ body {
   background: #f6f4ec;
 }
 .banner {
-  background: #90aed3;
+  background: linear-gradient(-90deg, rgba(53,102,163,1) 1%, rgba(62,112,174,1) 21%, rgba(120,164,210,1) 59%, rgba(168,202,228,1) 98%);
   width: 100%;
   height: 164px;
   margin: 0;
@@ -10,6 +10,7 @@ body {
 }
 h1 {
   padding: 55px 0px 0px 40px;
+  color: #F6F4EC;
 }
 .bannerFish {
   width: 223px;
@@ -31,6 +32,26 @@ h1 {
 }
 /* CONTENT*/
 /* LEFT */
+.selectedItem{
+  color: #D9673A;
+  margin-bottom: 16px;
+  font-size: 30px;
+  font-weight: 400;
+  text-decoration: none;
+}
+.unseletedItem{
+color:#1C1B1F;
+}
+ul li{
+  list-style: none;
+  text-decoration: none;
+}
+li a{
+  margin-bottom: 16px;
+  font-size: 22px;
+  font-weight: 400;
+  text-decoration: none;
+}
 .menu {
   width: 30%;
   text-align: center;
@@ -41,12 +62,12 @@ h1 {
 .menu ul {
   background: #e5e5e5;
   list-style: none;
-  font-size: 25px;
+  font-size: 22px;
   width: 350px;
   margin: 0;
   height: auto;
   padding: 0;
-  border-radius: 50px;
+  border-radius: 25px;
 
 }
 /* RIGHT */
@@ -59,13 +80,13 @@ h1 {
   width: 100%;
   height: auto;
   padding: 20px 30px 50px 0px;  
-  border-radius: 50px;;
+  border-radius: 25px;;
 }
 .infobox img {
   border-radius: 50%;
   max-width: 100%;
-  width: 300px;
-  height: auto;
+  width: 200px;
+  height: 200px;
 }
 .avatar{
     border-right: 1px solid rgb(188, 188, 188);
