--- a/frontend/src/app/client/user-page/user-page.component.html
+++ b/frontend/src/app/client/user-page/user-page.component.html
@@ -1,7 +1,7 @@
 <body>
   <div class="banner row">
     <div class="left">
-      <h1 class="text-white">Thông tin cá nhân</h1>
+      <h1>Thông Tin Cá Nhân</h1>
     </div>
     <div class="right">
       <img src="assets/Login/loginFish.png" class="bannerFish" />
@@ -17,18 +17,18 @@
       <div class="menu">
         <ul>
           <li class="py-3">
-            <a>Trang cá nhân</a>
+            <a routerLinkActive="active" routerLink="/User" (click)="onClickItem(0)" [ngClass]="activeIndex === 0 ? 'selectedItem' : 'unseletedItem'">Trang Cá Nhân</a>
           </li>
           <li class="py-3">
-            <a>Đơn mua</a>
+            <a routerLinkActive="active" routerLink="/History" (click)="onClickItem(1)" [ngClass]="activeIndex === 1 ? 'selectedItem' : 'unseletedItem'">Lịch Sử Mua Hàng</a>
           </li>
-          <li class="py-3"><a>Đăng xuất</a></li>
+          <li class="py-3"><a (click)="onClickItem(2)" [ngClass]="activeIndex === 2 ? 'selectedItem' : 'unseletedItem'">Đăng Xuất</a></li>
         </ul>
       </div>
 
       <div class="menu-content">
         <div class="infobox row">
-          <h3 class="ps-5 pt-3 pb-3">Thông tin tài khoản</h3>
+          <h3 class="ps-5 pt-3 pb-3">Thông Tin Tài Khoản</h3>
           <div class="avatar col-4 d-flex justify-content-center pt-3">
             <img src="assets/Login/avatar.png" />
           </div>
