Xong trang giỏ hàng - lần 1

--- a/frontend/src/app/client/shopping-cart/shopping-cart.component.css
+++ b/frontend/src/app/client/shopping-cart/shopping-cart.component.css
@@ -9,6 +9,18 @@
 body {
   margin-top: 150px;
 }
+/* cột-hình */
+.img-change {
+  height: 14vh;
+  width: 8vw;
+  padding: 10px;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.2) 0%,
+    rgba(0, 0, 0, 0.2) 100%
+  );
+}
+/* Thẻ-p */
 p {
   margin: 0;
 }
@@ -25,7 +37,22 @@ p {
   font-family: "Inter";
   padding-left: 20px;
 }
+.p-change-3 {
+  color: #5d5d5d;
+  font-family: "Inter";
+  font-size: 23px;
+  font-weight: 500;
+}
+.p-change-4 {
+  color: #0c0c0c;
+  font-size: 25px;
+  font-weight: 500;
+}
+/* Nút */
 .button-change {
+  border-radius: 5px;
+  border: 1px solid #e1e1e1;
+  background: #fff;
 }
 .button-change-2 {
   width: 100%;
@@ -37,6 +64,40 @@ p {
   font-size: 20px;
   font-weight: 400;
 }
+.button-change-3 {
+  border: none;
+  background: none;
+}
+/* Icon */
+.icon {
+  color: #acacac;
+  font-size: 25px;
+}
+/* Scrollbar */
+.scrollbar{
+  overflow: auto;
+  max-height: 50vh;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+/* Khung va cac the khac */
 hr {
   stroke-width: 2px;
   stroke: rgba(201, 201, 201, 0.8);
@@ -46,7 +107,7 @@ hr {
   background: rgba(244, 240, 240, 0.7);
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.con-item{
-  height: 15vh;
-  padding: 10px 10px 0 10px;
+.con-item {
+  height: 16vh;
+  padding: 15px 15px 0 15px;
 }
