thêm chức năng hiển thị chi tiết đơn hàng
sửa lỗi hiển thị sai ngày trong lịch sử đơn hàng
thêm toast message thông báo giỏ hàng trống khi bấm nút tiếp tục trong trang giỏ hàng

--- a/frontend/src/app/history/history.component.html
+++ b/frontend/src/app/history/history.component.html
@@ -39,7 +39,7 @@
                         <tbody>
                             <tr *ngFor="let item of listOrder, let i = index">
                                 <th scope="row">{{ [i + 1] }}</th>
-                                <td>{{item.ngayDat | date: 'mm/dd/yyyy'}}</td>
+                                <td>{{item.ngayDat | date: 'dd/MM/YYYY'}}</td>
                                 <td>{{item.tongSLMua}}</td>
                                 <td>
                                     {{item.tongTien |currency:"VND" :" "}}Đ
