--- a/frontend/src/app/receipt-detail/receipt-detail.component.html
+++ b/frontend/src/app/receipt-detail/receipt-detail.component.html
@@ -2,7 +2,7 @@
     <!-- khung-trai -->
     <div class="khung-trai">
       <div>
-        <button class="fa fa-arrow-left btn-back"></button>
+        <button class="fa fa-arrow-left btn-back" (click)="backToOrderList()"></button>
         <img class="logo" src="/assets/purchase/logo.png" alt="" />
       </div>
       <div class="ms-2 mt-3 p-change-1">
@@ -13,28 +13,28 @@
           class="input-change mb-2"
           placeholder="Họ và tên người nhận"
           type="text"
-          [(ngModel)]="listCTDH.nameUser"
           name="inform.nameUser"
           value="{{listCTDH.nameUser}}"
           required
+          readonly
         />
         <input
           class="input-change mb-2"
           placeholder="Địa chỉ email"
           type="email"
-          [(ngModel)]="listCTDH.email"
           name="inform.email"
-          value="{{listCTDH.email}}"
+          value="{{listCTDH.emailAddress}}"
           required
+          readonly
         />
         <input
           class="input-change mb-2"
           placeholder="Số điện thoại"
           type="tel"
-          [(ngModel)]="listCTDH.sdt"
           name="inform.sdt"
           value="{{listCTDH.sdt}}"
           required
+          readonly
         />
         <input
           class="input-change"
@@ -44,6 +44,7 @@
           value="{{listCTDH.addressDelivery}}"
           name="inform.addressDelivery"
           required
+          readonly
         />
       </div>
       <div>
@@ -61,6 +62,7 @@
           value="{{listCTDH.phuongThucTT}}"
           name="inform.addressDelivery"
           required
+          readonly
         />
       </div>
     </div>
@@ -71,7 +73,7 @@
         <hr class="hr-2" />
       </div>
       <div class="scrollbar-2">
-        <div *ngFor="let item of listCTDH.CTDH">
+        <div *ngFor="let item of listSP">
           <div class="align-items-center justify-content-center d-flex">
             <div class="col-4">
               <img
@@ -90,7 +92,7 @@
           </div>
         </div>
       </div>
-  
+
       <div>
         <hr class="hr-3" />
       </div>
@@ -105,7 +107,7 @@
       </div>
       <div class="d-flex">
         <div class="col-6 text-start">
-          <p class="p-change-2">thành tiền:</p>
+          <p class="p-change-2">Thành tiền:</p>
         </div>
         <div class="col-6 text-end">
           <p class="p-change-2">
@@ -116,5 +118,5 @@
       <div class="align-items-center justify-content-center d-flex">
       </div>
     </div>
-  /body>
-  
+  </div>
+</body>
