--- a/frontend/src/app/client/header/header.component.html
+++ b/frontend/src/app/client/header/header.component.html
@@ -5,8 +5,13 @@
   <div class="container">
     <div class="search_wrap">
       <div class="search_box">
-        <input type="text" class="input" placeholder="Tìm kiếm..." />
-        <div class="btn btn-common">
+        <input
+          type="text"
+          class="input"
+          placeholder="Tìm kiếm..."
+          [(ngModel)]="tenSP"
+        />
+        <div class="btn btn-common" (click)="search()">
           <i
             class="fas fa-search"
             style="color: #f1f1f1; font-size: 1.25rem"
@@ -37,9 +42,7 @@
         <i class="fas fa-user-circle" style="font-size: 1.5rem"></i>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <li>
-            <a class="dropdown-item" [routerLink]="['Login']"
-              >Đăng nhập</a
-            >
+            <a class="dropdown-item" [routerLink]="['Login']">Đăng nhập</a>
           </li>
           <li><a class="dropdown-item">Đăng ký</a></li>
         </ul>
