--- a/frontend/src/app/client/homepage/homepage.component.html
+++ b/frontend/src/app/client/homepage/homepage.component.html
@@ -24,34 +24,42 @@
       src="../../../assets/images/client/homepage/andoduong.png"
       class="imageItem"
     />
-    <p class="tieudenho">Ấn Độ Dương</p>
-    <p class="noidungnho">Cực kỳ đa dạng các loài cá nhiệt đới</p>
+    <div class="khung-chu">
+      <p class="tieudenho">Ấn Độ Dương</p>
+      <p class="noidungnho">Cực kỳ đa dạng các loài cá nhiệt đới</p>
+    </div>
   </div>
   <div class="item">
     <img
       src="../../../assets/images/client/homepage/thaibinhduong.png"
       class="imageItem"
     />
-    <p class="tieudenho">Thái Bình Dương</p>
-    <p class="noidungnho">Có nhiều rặng san hô đầy màu sắc</p>
+    <div class="khung-chu">
+      <p class="tieudenho">Thái Bình Dương</p>
+      <p class="noidungnho">Có nhiều rặng san hô đầy màu sắc</p>
+    </div>
   </div>
   <div class="item">
     <img
       src="../../../assets/images/client/homepage/bacbangduong.png"
       class="imageItem"
     />
-    <p class="tieudenho">Bắc Băng Dương</p>
-    <p class="noidungnho">Thường có những loài cá quý hiếm</p>
+    <div class="khung-chu">
+      <p class="tieudenho">Bắc Băng Dương</p>
+      <p class="noidungnho">Thường có những loài cá quý hiếm</p>
+    </div>
   </div>
   <div class="item">
     <img
       src="../../../assets/images/client/homepage/namdaiduong.png"
       class="imageItem"
     />
-    <p class="tieudenho">Nam Đại Dương</p>
-    <p class="noidungnho">
-      Có nhiều loài cá rất được ưa chuộng vì đặc tính dễ nuôi
-    </p>
+    <div class="khung-chu">
+      <p class="tieudenho">Nam Đại Dương</p>
+      <p class="noidungnho" style="font-size: 29px">
+        Có nhiều loài cá rất được ưa chuộng vì đặc tính dễ nuôi
+      </p>
+    </div>
   </div>
 </div>
 <!--  -->
