--- a/frontend/src/app/client/catalog/catalog.component.css
+++ b/frontend/src/app/client/catalog/catalog.component.css
@@ -40,32 +40,34 @@ color:#1C1B1F;
     margin-bottom: 32px;
 }
 
-.card{
-    border-radius: 25px;
+.card {
+  border-radius: 25px;
+  width: 450px;
+  height: 450px;
 }
-.card-body{
-    border-top: 1px solid rgb(190, 196, 190);
+.card-body {
+  border-top: 1px solid rgb(190, 196, 190);
 }
-.proimage{
-    width:250px;
-    height:250px;
-    max-width: 100%;
-    max-height: 100%;
+.proimage {
+  width: 250px;
+  height: 250px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .btn {
-    font-size: 18px;
-    background: #437ac3;
-    width: 100px;
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
-    color: #F6F4EC;
-    border-radius: 10px;
-    cursor: pointer;
+  font-size: 18px;
+  background: #437ac3;
+  width: 250px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  color: #f6f4ec;
+  border-radius: 10px;
+  cursor: pointer;
 }
 .btn:hover {
-    box-shadow: 1px 1px 2px rgba(255, 255, 255, .5);
-    background: #437ac3;
-    color: rgb(191, 212, 240);
+  box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+  background: #437ac3;
+  color: rgb(191, 212, 240);
 }
