--- a/frontend/src/app/client/product-detail/product-detail.component.html
+++ b/frontend/src/app/client/product-detail/product-detail.component.html
@@ -1,7 +1,13 @@
 <body>
   <div class="con row">
     <!-- khung-trai -->
-    <div class="khung-trai">
+    <div
+      class="khung-trai"
+      style="
+        background: url(/assets/Shared/search-bg.jpg);
+        background-size: cover;
+      "
+    >
       <img
         class="img-change"
         src="http://localhost:3800/ProductImages/{{ pro.tenImageSP }}"
@@ -9,17 +15,15 @@
     </div>
     <!--khung-phai-->
     <div class="khung-phai">
-      <p class="p-change-1 mb-2">{{pro.tenSP}}</p>
+      <p class="p-change-1 mb-2">{{ pro.tenSP }}</p>
       <p class="content p-change-1 mb-2">
         Đơn giá: {{ pro.giaTien | currency : "VND" : "" }}Đ
       </p>
       <p class="content p-change-1 mb-2">Tình trạng: Còn hàng</p>
-      <p class="p-change-1 mb-2">Số lượng: {{pro.soLuong}}</p>
-      <p class="p-change-1 mb-2">Trọng lượng: {{pro.trongLuong}}</p>
-      <p class="p-change-1 mb-2">Loại đại dương: {{pro.loaiCa}}</p>
-      <p class="p-change-1 mb-2">
-        Mô tả: {{pro.moTa}}
-      </p>
+      <p class="p-change-1 mb-2">Số lượng: {{ pro.soLuong }}</p>
+      <p class="p-change-1 mb-2">Trọng lượng: {{ pro.trongLuong }}</p>
+      <p class="p-change-1 mb-2">Loại đại dương: {{ pro.loaiCa }}</p>
+      <p class="p-change-1 mb-2">Mô tả: {{ pro.moTa }}</p>
       <div class="d-flex" style="">
         <p class="p-change-1 me-5">Số lượng:</p>
         <div class="wrapper">
@@ -30,13 +34,15 @@
       </div>
       <div class="d-flex mt-4">
         <button class="bt-change-2 me-5 ms-5">Mua Ngay!</button>
-        <button class="bt-change-3" (click)="addToCartList()">Thêm vào giỏ hàng</button>
+        <button class="bt-change-3" (click)="addToCartList()">
+          Thêm vào giỏ hàng
+        </button>
       </div>
     </div>
   </div>
   <hr />
   <!-- SLIDER -->
-  
+
   <div class="product">
     <div class="container-fluid">
       <div class="row">
@@ -48,12 +54,21 @@
           <div class="item" *ngFor="let list of listSP">
             <span href="#" (click)="changeToDetailPage(list._id)">
               <div class="card mb-3">
-                <img
-                  src="http://localhost:3800/ProductImages/{{
-                    list.hinhAnh[0].tenImageSP
-                  }}"
-                  class="proimage card-img-top p-2"
-                />
+                <div
+                  style="
+                    background: url(/assets/Shared/search-bg.jpg);
+                    background-size: cover;
+                  "
+                  class="text-center"
+                >
+                  <img
+                    src="http://localhost:3800/ProductImages/{{
+                      list.hinhAnh[0].tenImageSP
+                    }}"
+                    class="proimage card-img-top p-2"
+                  />
+                </div>
+
                 <div class="card-body">
                   <h5 class="card-title fs-3">{{ list.tenSP }}</h5>
                   <div class="col d-flex justify-content-between">
