--- a/frontend/src/app/cart-list/cart-list.component.html
+++ b/frontend/src/app/cart-list/cart-list.component.html
@@ -1,17 +1,21 @@
 <body>
-  <div class="container">
     <!-- phần trên -->
-    <div class="d-flex">
-      <div class="col-6">
-        <p class="p-change-1">Giỏ hàng của bạn</p>
+      <div class="banner row">
+        <div class="left">
+          <h1>Giỏ Hàng Của Bạn</h1>
+        </div>
+        <div class="right">
+          <img src="assets/Login/loginFish.png" class="bannerFish" />
+        </div>
       </div>
-      <div class="col-6 text-end">
-        <button class="button-change" (click)="backToCatalog()">Tiếp tục mua hàng</button>
+      <div class="container">
+      <div class="pt-2">
+        <button class="button-change" (click)="backToCatalog()">
+          <i class="fa-solid fa-arrow-left" style="margin-right: 8px;"></i>Trở về mua hàng
+        </button>
       </div>
-    </div>
-    <div>
-      <hr />
-    </div>
+    <hr />
+
     <!-- Phần khung -->
     <div class="khung pt-5 mb-5">
       <!-- Khung trên -->
