--- a/frontend/src/app/client/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/client/shopping-cart/shopping-cart.component.html
@@ -2,8 +2,13 @@
   <div class="container">
     <!-- phần trên -->
     <div class="d-flex">
-      <div class="col-6">
-        <p class="p-change-1">Giỏ hàng của bạn</p>
+      <div class="banner row">
+        <div class="left">
+          <h1>Giỏ Hàng Của Bạn</h1>
+        </div>
+        <div class="right">
+          <img src="assets/Login/loginFish.png" class="bannerFish" />
+        </div>
       </div>
       <div class="col-6 text-end">
         <button class="button-change">Tiếp tục mua hàng</button>
